--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: ./scripts/vendor.sh
       - run: make loadable
-      - run: /usr/local/opt/python@3/libexec/bin/python -m pip install pytest numpy; make test-loadable python=/usr/local/opt/python@3/libexec/bin/python
+      - run: python -m pip install pytest numpy; make test-loadable
       - uses: actions/upload-artifact@v3
         with:
           name: sqlite-vec-macos-aarch64-extension
