--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: ./scripts/vendor.sh
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
       - run: make loadable
       - run: python3 -m pip install pytest numpy; make test-loadable
       - uses: actions/upload-artifact@v3
