--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -14,17 +14,17 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: mymindstorm/setup-emsdk@v12
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          version: "latest"
-      - run: ./scripts/vendor.sh
-      - run: make sqlite-vec.h
-      - run: make wasm
-      - run: make site
+          cache: npm
+          cache-dependency-path: site/package-lock.json
+      - run: npm ci
+        working-directory: site/
+      - run: make site-build
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
-          path: dist/.site
+          path: site/.vitepress/dist
       - id: deployment
         uses: actions/deploy-pages@v1
