--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,6 +46,20 @@ jobs:
         with:
           name: sqlite-vec-windows-x86_64-extension
           path: dist/*
+  build-wasm32-emscripten:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mymindstorm/setup-emsdk@v12
+        with:
+          version: "latest"
+      - run: ./scripts/vendor.sh
+      - run: make sqlite-vec.h
+      - run: make wasm
+      - uses: actions/upload-artifact@v4
+        with:
+          name: sqlite-vec-wasm32-emscripten
+          path: dist/*
   dist:
     runs-on: ubuntu-latest
     needs:
@@ -54,6 +68,7 @@ jobs:
         build-macos-x86_64-extension,
         build-macos-aarch64-extension,
         build-windows-x86_64-extension,
+        build-wasm32-emscripten,
       ]
     permissions:
       contents: write
@@ -75,6 +90,10 @@ jobs:
         with:
           name: sqlite-vec-windows-x86_64-extension
           path: dist/windows-x86_64
+      - uses: actions/download-artifact@v4
+        with:
+          name: sqlite-vec-wasm32-emscripten
+          path: dist/wasm32-emscripten
       - run: |
           curl -L https://github.com/asg017/sqlite-dist/releases/download/v0.0.1-alpha.4/sqlite-dist-x86_64-unknown-linux-gnu.tar.xz \
             | tar xfJ - --strip-components 1
