--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,7 +59,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: sqlite-vec-wasm32-emscripten
-          path: dist/*
+          path: dist/.wasm/*
   dist:
     runs-on: ubuntu-latest
     needs:
