try out static blobs feature behind SQLITE_VEC_ENABLE_EXPERIMENTAL

--- a/examples/simple-c/Makefile
+++ b/examples/simple-c/Makefile
@@ -1,6 +1,6 @@
 demo: demo.c
 	gcc \
-		-DSQLITE_CORE \
+		-O3 -DSQLITE_CORE \
 		-I../../ -I../../vendor \
 		demo.c ../../sqlite-vec.c ../../vendor/sqlite3.c \
 		-o $@
