--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,6 +42,9 @@ jobs:
       - run: ./scripts/vendor.sh
         shell: bash
       - run: make loadable
+        env:
+          ## TODO temporary, should be unset (ie cl.exe)
+          CC: gcc
       - uses: actions/upload-artifact@v4
         with:
           name: sqlite-vec-windows-x86_64-extension
