--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: "3.12"
       - run: ./scripts/vendor.sh
-      - run: make loadable
+      - run: make loadable static
       - run: pip install pytest numpy; make test-loadable
       - uses: actions/upload-artifact@v4
         with:
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: ./scripts/vendor.sh
-      - run: make loadable
+      - run: make loadable static
       - run: /usr/local/opt/python@3/libexec/bin/python -m pip install --break-system-packages pytest numpy; make test-loadable python=/usr/local/opt/python@3/libexec/bin/python
       - uses: actions/upload-artifact@v4
         with:
@@ -36,7 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: ./scripts/vendor.sh
-      - run: make loadable
+      - run: make loadable static
       - run: /opt/homebrew/opt/python3/libexec/bin/python -m pip install pytest numpy --break-system-packages; make test-loadable python=/opt/homebrew/opt/python3/libexec/bin/python
       - uses: actions/upload-artifact@v4
         with:
@@ -51,7 +51,7 @@ jobs:
           python-version: "3.12"
       - run: ./scripts/vendor.sh
         shell: bash
-      - run: make loadable CC=gcc
+      - run: make loadable static CC=gcc
       - run: pip install pytest numpy; make test-loadable
       - uses: actions/upload-artifact@v4
         with:
