--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: ./scripts/vendor.sh
-      - run: make loadable
+      - run: make loadable static
       - uses: actions/upload-artifact@v4
         with:
           name: sqlite-vec-linux-x86_64-extension
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: ./scripts/vendor.sh
-      - run: make loadable
+      - run: make loadable static
       - uses: actions/upload-artifact@v4
         with:
           name: sqlite-vec-macos-x86_64-extension
@@ -30,7 +30,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: ./scripts/vendor.sh
-      - run: make loadable
+      - run: make loadable static
       - uses: actions/upload-artifact@v4
         with:
           name: sqlite-vec-macos-aarch64-extension
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: ./scripts/vendor.sh
         shell: bash
-      - run: make loadable
+      - run: make loadable static
         env:
           ## TODO temporary, should be unset (ie cl.exe)
           CC: gcc
