--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -74,6 +74,8 @@ jobs:
           GH_TOKEN: ${{ github.token }}
   build-cosmopolitan:
     runs-on: macos-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - run: |
