--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -100,7 +100,16 @@ jobs:
           path: go-sqlite3
       - run: git apply ../bindings/go/ncruces/go-sqlite3.patch
         working-directory: go-sqlite3/
-      - run: .github/workflows/repro.sh
+      - run: |
+          mkdir -p tools/
+          [ -d "tools/wasi-sdk"* ]         || curl -#L "$WASI_SDK" | tar xzC tools &
+          [ -d "tools/binaryen-version"* ] || curl -#L "$BINARYEN" | tar xzC tools &
+          wait
+          sqlite3/download.sh
+          embed/build.sh
+        env:
+          WASI_SDK: "https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-23/wasi-sdk-23.0-linux.tar.gz"
+          BINARYEN: "https://github.com/WebAssembly/binaryen/releases/download/version_118/binaryen-version_118-x86_64-linux.tar.gz"
         working-directory: go-sqlite3/
       - uses: actions/upload-artifact@v4
         with:
