add sqlite3.h and sqlite3ext.h to rust bindings

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -199,6 +199,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - run: ./scripts/vendor.sh
       - run: make sqlite-vec.h
       - run: make deps
         working-directory: ./bindings/rust
