--- a/bindings/rust/Makefile
+++ b/bindings/rust/Makefile
@@ -1,6 +1,6 @@
 VERSION=$(shell cat ../../VERSION)
 
-deps: Cargo.toml sqlite-vec.c sqlite-vec.h
+deps: Cargo.toml sqlite-vec.c sqlite-vec.h sqlite3ext.h sqlite3.h
 
 Cargo.toml: ../../VERSION Cargo.toml.tmpl
 		VERSION=$(VERSION) envsubst < Cargo.toml.tmpl > $@
@@ -10,5 +10,11 @@ sqlite-vec.c: ../../sqlite-vec.c
 
 sqlite-vec.h: ../../sqlite-vec.h
 		cp $< $@
+
+sqlite3ext.h: ../../vendor/sqlite3ext.h
+	cp $< $@
+
+sqlite3.h:
+	cp $< $@
 
 .PHONY: deps
