--- a/examples/simple-go-ncruces/Makefile
+++ b/examples/simple-go-ncruces/Makefile
@@ -1,6 +1,13 @@
 
-demo: demo.go
+VERSION=0.0.1-alpha.27
+
+demo: demo.go sqlite3.vec.wasm
 	go build -o $@ $<
 
 sqlite3.vec.wasm:
-	exit 1
+	curl -L -o $@ https://github.com/asg017/sqlite-vec/releases/download/v$(VERSION)/sqlite-vec-$(VERSION)-ncruces-go.wasm
+
+clean:
+	rm demo sqlite3.vec.wasm
+
+.PHONY: clean
