--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -232,7 +232,16 @@ jobs:
           WASI_SDK: "https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-23/wasi-sdk-23.0-linux.tar.gz"
           BINARYEN: "https://github.com/WebAssembly/binaryen/releases/download/version_118/binaryen-version_118-x86_64-linux.tar.gz"
         working-directory: go-sqlite3/
-      - run: cp go-sqlite3/embed/sqlite3.wasm sqlite-vec-$(cat VERSION)-ncruces-go.wasm
-      - run: gh release upload ${{ github.ref_name }} sqlite-vec-$(cat VERSION)-ncruces-go.wasm
-        env:
-          GH_TOKEN: ${{ github.token }}
+      - uses: actions/checkout@v4
+        with:
+          repository: asg017/sqlite-vec-ncruces-bindings
+          path: sqlite-vec-ncruces-bindings
+      - run: cp go-sqlite3/embed/sqlite3.wasm sqlite-vec-ncruces-bindings/sqlite3.wasm
+      - run: |
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+          git add sqlite3.wasm
+          git commit --allow-empty -m "${{ github.ref_name }}" || exit 0
+          git tag  "${{ github.ref_name }}"
+          git push origin main "${{ github.ref_name }}"
+        working-directory: sqlite-vec-ncruces-bindings
