--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -238,10 +238,10 @@ jobs:
           path: sqlite-vec-ncruces-bindings
       - run: cp go-sqlite3/embed/sqlite3.wasm sqlite-vec-ncruces-bindings/sqlite3.wasm
       - run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "Alex Garcia"
+          git config user.email "alexsebastian.garcia@gmail.com"
           git add sqlite3.wasm
-          git commit --allow-empty -m "${{ github.ref_name }}" || exit 0
+          git commit --allow-empty -m "AUTOMATED ${{ github.ref_name }}" || exit 0
           git tag  "${{ github.ref_name }}"
           git push origin main "${{ github.ref_name }}"
         working-directory: sqlite-vec-ncruces-bindings
