--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -234,13 +234,13 @@ jobs:
         working-directory: go-sqlite3/
       - uses: actions/checkout@v4
         with:
-          repository: asg017/sqlite-vec-bindings-go
-          path: sqlite-vec-bindings-go
+          repository: asg017/sqlite-vec-go-bindings
+          path: sqlite-vec-go-bindings
           token: ${{secrets.NCRUCES_BINDINGS_REPO_PAT}}
       - run: |
-          cp go-sqlite3/embed/sqlite3.wasm sqlite-vec-bindings-go/ncruces/sqlite3.wasm
-          cp sqlite-vec.c sqlite-vec-bindings-go/cgo/sqlite-vec.c
-          cp sqlite-vec.h sqlite-vec-bindings-go/cgo/sqlite-vec.h
+          cp go-sqlite3/embed/sqlite3.wasm sqlite-vec-go-bindings/ncruces/sqlite3.wasm
+          cp sqlite-vec.c sqlite-vec-go-bindings/cgo/sqlite-vec.c
+          cp sqlite-vec.h sqlite-vec-go-bindings/cgo/sqlite-vec.h
       - run: |
           git config user.name "Alex Garcia"
           git config user.email "alexsebastian.garcia@gmail.com"
@@ -248,6 +248,6 @@ jobs:
           git commit --allow-empty -m "AUTOMATED ${{ github.ref_name }}" || exit 0
           git tag  "${{ github.ref_name }}"
           git push origin main "${{ github.ref_name }}"
-        working-directory: sqlite-vec-bindings-go
+        working-directory: sqlite-vec-go-bindings
         env:
           GITHUB_TOKEN: ${{secrets.NCRUCES_BINDINGS_REPO_PAT}}
